RESOLVED FIXED279635
Fix !ENABLE(VARIATION_FONTS) build following 283572@main
https://bugs.webkit.org/show_bug.cgi?id=279635
Summary Fix !ENABLE(VARIATION_FONTS) build following 283572@main
Ross Kirsling
Reported 2024-09-12 17:28:08 PDT
.
Attachments
Ross Kirsling
Comment 1 2024-09-12 17:29:16 PDT
EWS
Comment 2 2024-09-12 17:32:33 PDT
Committed 283586@main (22acf1409591): <https://commits.webkit.org/283586@main> Reviewed commits have been landed. Closing PR #33588 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-09-12 20:11:01 PDT
Note You need to log in before you can comment on or make changes to this bug.