Fix !ENABLE(VARIATION_FONTS) build following 283572@main https://bugs.webkit.org/show_bug.cgi?id=279635

Unreviewed PlayStation build fix.

* Source/WebCore/css/parser/CSSPropertyParserConsumer+Font.cpp:
(WebCore::CSSPropertyParserHelpers::consumeFontFaceFontWeight):
Fix incorrectly typed return value.

Canonical link: https://commits.webkit.org/283586@main